# loquor

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_macos.py
NativeMacApp/: Package.swift
NativeMacApp/Sources/: AppState.swift  BackendClient.swift  ClipboardManager.swift  ContentView.swift  HotkeyFormatter.swift  HotkeyMonitor.swift  Models.swift  SettingsView.swift  SpeechToTextNativeApp.swift
scripts/: build_backend_runtime.sh  build_dmg.sh  build_native_app.sh  generate_app_icon.swift  install_native_app.sh
src/speech_to_text/: __init__.py  backend_service.py  config.py  core.py  legacy_hotkeys.py  macos.py  macos_app.py  main.py  menubar.py
