[project]
name = "speech-to-text"
version = "0.1.0"
description = "Starter local speech-to-text app using microphone input and Parakeet on Apple Silicon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "parakeet-mlx>=0.5.1",
  "sounddevice>=0.5.1",
  "soundfile>=0.12.1",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
